--- a/Task_1/Task_1/Task_1.csproj
+++ b/Task_1/Task_1/Task_1.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Interfaces\IColor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structures\ColoredSide.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -55,5 +56,6 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
