--- a/Task_1/Task_1/Task_1.csproj
+++ b/Task_1/Task_1/Task_1.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Triangle.cs" />
     <Compile Include="Interfaces\IColor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
