--- a/WpfShapes/WpfShapes/WpfShapes.csproj
+++ b/WpfShapes/WpfShapes/WpfShapes.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BusinessLogic\LogicBL.cs" />
     <Compile Include="Utils\Serialization.cs" />
     <Compile Include="Utils\Utils.cs" />
     <Page Include="MainWindow.xaml">
