--- a/Task_1/WpfApp/WpfApp.csproj
+++ b/Task_1/WpfApp/WpfApp.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utils\FileManager.cs" />
     <Compile Include="Utils\Seeds.cs" />
     <Compile Include="Utils\Serialization.cs" />
     <Page Include="MainWindow.xaml">
