--- a/ADO.NET/ADO.NET/ADO.NET.csproj
+++ b/ADO.NET/ADO.NET/ADO.NET.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Database.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
