--- a/Task_1/WpfApp/WpfApp.csproj
+++ b/Task_1/WpfApp/WpfApp.csproj
@@ -63,6 +63,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BL\BL.cs" />
+    <Compile Include="Models\TaxiAppDbContext.cs" />
     <Compile Include="Utils\FileManager.cs" />
     <Compile Include="Utils\Seeds.cs" />
     <Compile Include="Utils\Serialization.cs" />
