--- a/Task_1/WpfApp/WpfApp.csproj
+++ b/Task_1/WpfApp/WpfApp.csproj
@@ -64,6 +64,8 @@
     </ApplicationDefinition>
     <Compile Include="BL\BL.cs" />
     <Compile Include="Models\TaxiAppDbContext.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Repository\IGenericRepository.cs" />
     <Compile Include="Utils\FileManager.cs" />
     <Compile Include="Utils\Seeds.cs" />
     <Compile Include="Utils\Serialization.cs" />
